--- a/src/view/ClientForm.fxml
+++ b/src/view/ClientForm.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="636.0" prefWidth="549.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ClientFormController">
+<AnchorPane fx:id="clientFormContext" prefHeight="636.0" prefWidth="549.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ClientFormController">
    <children>
       <AnchorPane layoutY="-2.0" prefHeight="71.0" prefWidth="551.0" style="-fx-background-color: #352b48;">
          <children>
@@ -38,7 +38,7 @@
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Button>
-      <ImageView fitHeight="25.0" fitWidth="37.0" layoutX="435.0" layoutY="594.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="25.0" fitWidth="37.0" layoutX="435.0" layoutY="594.0" onMouseClicked="#ImageMouseClicked" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../asserts/bg.jpg" />
          </image>
